--- a/fitnessadmin/templates/fitnessadmin/delete.html
+++ b/fitnessadmin/templates/fitnessadmin/delete.html
@@ -5,7 +5,7 @@
 <form action="" method="POST">
     {% csrf_token %}
     <p> Delete {{ object }} ? </p>
-    <a href={% url 'courses' %}>Go back</a>
+    <a href={% url 'admincourses' %}>Go back</a>
     <input type="submit" value="Confirm" />
 </form>
 {% endblock content %}
