--- a/users/templates/users/instructors.html
+++ b/users/templates/users/instructors.html
@@ -8,7 +8,6 @@
         <div class="container container--narrow">
             <div class="hero-section__box">
                 <h2>CONNECT WITH <span>Instructors</span></h2>
-                <h2>AROUND THE WORLD</h2>
             </div>
 
             <div class="hero-section__search">
@@ -17,7 +16,7 @@
                     <div class="form__field">
                         <label for="formInput#search">Search Instructors </label>
                         <input class="input input--text" id="formInput#search" type="text" name="search_query"
-                            value="{{search_query}}" placeholder="Search by instructor name" />
+                            value="{{search_query}}" placeholder="Search by instructors" />
                     </div>
 
                     <input class="btn btn--sub btn--lg" type="submit" value="Search" />
