--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -2,4 +2,12 @@
 
 {% block content %}
 
+<main class="projects">
+    <section class="hero-section text-center">
+        <div class="container container--narrow">
+            <div class="hero-section__box">
+                <h2>Welcome to <span>Fitness</span> World</h2>
+            </div>
+</main>
+
 {% endblock content%}
