--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 <header class="header">
     <div class="container container--narrow">
         <a href="{% url 'profiles' %}" class="header__logo">
-            <img src="{% static 'images/Fitnesslogo.svg' %} " alt="FitnessApp" />
+            <img src="{% static 'images/logo.png' %} " alt="FitnessApp" />
         </a>
 
         <nav class="header__nav">
@@ -16,7 +16,7 @@
             <ul class="header__menu">
                 <li class="header__menuItem"><a href="{% url 'instructors' %}">Instructors</a></li>
                 <li class="header__menuItem"><a href="{% url 'courses' %}">Courses</a></li>
-                <li class="header__menuItem"><a href="{% url 'enrolled' %}">Enrolled</a></li>
+                <li class="header__menuItem"><a href="{% url 'enroll' %}">Enrolled</a></li>
 
 
 
