--- a/users/templates/users/single-course.html
+++ b/users/templates/users/single-course.html
@@ -17,12 +17,21 @@
 
                 </div>
 
-                {% if course.zoom_link %}
+                {% if not enrolledFlag %}
+                <form action="" method="POST">
+                {% csrf_token %}
+                <input id="enrollForm" class="btn btn--sub btn--lg  my-md" type="submit" value="Enroll" name='enroll' />
+                </form>
+                {% elif enrolledFlag and course.zoom_link %}
+                <form action="" method="POST">
+                {% csrf_token %}
                 <a class="singleProject__liveLink" href="{{course.zoom_link}}" target="_blank"><i
                         class="im im-external-link"></i>Click here to join the Zoom session
                 </a>
+                <input id="unenrollForm" class="btn btn--sub btn--lg  my-md" type="submit" value="Unsubscribe" name='enroll' />
+                </form>
                 {% endif %}
-
+                
             </div>
             <div class="column column--2of3">
                 <img class="singleProject__preview" src="{{ course.featured_image.url }}" alt="portfolio thumbnail" />
