Final Merge. Working website.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,7 +14,7 @@
                 <div class="toggle-menu__lines"></div>
             </label>
             <ul class="header__menu">
-                <li class="header__menuItem"><a href="{% url 'instructors' %}">Instructors</a></li>
+            <!--  <li class="header__menuItem"><a href="{% url 'instructors' %}">Instructors</a></li>-->  
                 <li class="header__menuItem"><a href="{% url 'courses' %}">Courses</a></li>
                 <li class="header__menuItem"><a href="{% url 'enroll' %}">Enrolled</a></li>
 
