added data to db

--- a/users/templates/users/enroll.html
+++ b/users/templates/users/enroll.html
@@ -7,7 +7,7 @@
     <section class="hero-section text-center">
         <div class="container container--narrow">
             <div class="hero-section__box">
-                <h2>Search for <span>Enrolled students</span></h2>
+                <h2>Search for <span>Enrolled Courses</span></h2>
             </div>
             <div class="hero-section__search">
                 <form id='searchForm' class="form" action="{% url 'courses' %}" method="get">
