--- a/users/templates/users/instructor-profile.html
+++ b/users/templates/users/instructor-profile.html
@@ -12,6 +12,8 @@
                         <img class="avatar avatar--xl" src="{{ instructor.featured_image.url }}" />
                         <h2 class="dev__name">{{instructor.instructorname}}</h2>
                         <p class="dev__title">{{instructor.instructorcourse}}</p>
+                        <p class="dev__title">{{instructor.instructorphonenumber}}</p>
+                        <p class="dev__title">{{instructor.instructoremail}}</p>
                         
                     </div>
                 </div>
@@ -27,7 +29,7 @@
                                     <img class="project__thumbnail" src="{{course.featured_image.url}}"
                                         alt="project thumbnail" />
                                     <div class="card__body">
-                                        <h3 class="project__title">{{course.coursedescription}}</h3>
+                                        <h3 class="project__title">{{course.coursename}}</h3>
                                         <p><a class="project__author"
                                                 href="{% url 'instructor' course.trainer.instructorid %}">By
                                                 {{course.trainer.instructorname}}</a>
