implemented charts for enrollmenr and courses and override some graph styles

--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -8,6 +8,8 @@
             <div class="hero-section__box">
                 <h2>Welcome to <span>Fitness</span> World</h2>
             </div>
+        </div>
+    </section>
 </main>
 
 {% endblock content%}
